# discovery_mission_radar

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.cookiecutter/: config
discovery_mission_radar/: __init__.py
discovery_mission_radar/config/: llm_prompts.yaml  logging.yaml  pipeline.yaml  pipeline_ASF.yaml
discovery_mission_radar/config/topics/AHL/: config_active_transport.yaml  config_advanced_food_production.yaml  config_consumer_health_tech.yaml  config_delivery_apps.yaml  config_food_advertisement.yaml  config_food_retail_analytics.yaml  config_glp_adjacent.yaml  config_health_food_meal_replacement.yaml  config_health_general.yaml  config_insects.yaml  config_lab_meat.yaml  config_meal_kits.yaml  config_personalised_nutrition.yaml  config_physical_sports.yaml  config_reformulation_ingredients.yaml  config_reformulation_salt.yaml  config_reformulation_sugar.yaml  config_retail_tech_general.yaml  config_supply_chain.yaml  config_therapeutics_health_coaching.yaml  config_weight_loss_drugs.yaml
discovery_mission_radar/config/topics/ASF/: config_bioenergy.yaml  config_biomass_heating.yaml  config_built_environment.yaml  config_ccus.yaml  config_decarbonisation_general.yaml  config_district_heating.yaml  config_energy_efficiency.yaml  config_energy_grid.yaml  config_energy_storage.yaml  config_geothermal_energy.yaml  config_green_skills.yaml  config_heat_pumps.yaml  config_solar.yaml  (+7 more)
discovery_mission_radar/notebooks/: Heat pumps_funding_rounds.csv  MR_hp_nation_analysis.ipynb  MR_hp_nation_analysis.py  test.py
discovery_mission_radar/notebooks/2025_Q2_ASF/: MR_hp_nation_analysis.ipynb
discovery_mission_radar/notebooks/MR_2025_Q2_ASF/: ASF_geographical_analysis.py
discovery_mission_radar/pipeline/: __init__.py  cli.py  config_manager.py  runner.py
discovery_mission_radar/pipeline/analysis/: __init__.py  aggregation.py  base.py  consolidation.py  crunchbase_analysis.py  gtr_analysis.py  hansard_analysis.py  overton_analysis.py  utils.py
discovery_mission_radar/pipeline/data_sources/: __init__.py  argilla.py  base.py  crunchbase.py  gtr.py  hansard.py  overton.py  utils.py
docs/: conf.py  index.rst
(+50 files in other folders)
