[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["discovery_mission_radar"]

[project]
name = "discovery_mission_radar"
version = "0.1.0"
description = "Scanning quarterly signals and trends"
authors = [{name = "Nesta"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argilla>=2.8.0",
    "click>=8.0.0",
    "numpy>=1.24.0",
    "pandas>=1.5.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.2.0",
    "scipy>=1.10.0",
    "structlog>=22.0.0",
    "vl-convert-python>=0.2.2",
    "discovery-utils>=0.1.1",
]

[project.urls]
repository = "https://github.com/nestauk/discovery_mission_radar"
issues = "https://github.com/nestauk/discovery_mission_radar/issues"

[dependency-groups]
dev = ["ipykernel", "jupytext", "ruff", "pytest", "pytest-cov", "pre-commit"]

[tool.jupytext]
# Always pair ipynb notebooks to py:percent files
default_jupytext_formats = "ipynb,py:percent"
# Comment out magics (allows code formatting)
comment_magics = true
# Strip cell-level metadata (avoid polluting git diffs)
default_cell_metadata_filter = "-all"

[tool.ruff.lint]
select = [
    "ANN", # flake8-annotations
    "B",   # flake8-bugbear: Likely bugs
    "C",   # flake8-comprehensions and mccabe complexity
    "D",   # pydocstyle: Docstring conventions
    "E",   # pycodestyle: Errors (default)
    "F",   # pyflakes: Linter
    "I",   # isort
    "N",   # pep8-naming: Naming conventions
    "W",   # pycodestyle: Warnings (default)
]
ignore = [
    "D100", # Warns about missing module-level docstrings
    "S101", # Warns about assert being removed when compiled
]

[tool.ruff.lint.isort]
known-first-party = ["discovery_mission_radar"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402", "D104"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.uv.sources]
discovery-utils = { git = "https://github.com/nestauk/discovery_utils.git" }
